fix: layout overflow error correct

--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -11,7 +11,7 @@
     flex-shrink: 1;
     display: flex;
     flex-direction: column;
-
+    overflow: hidden;
     background: rgba(0, 0, 0, 0.1);
     z-index: 1;
     width: calc(100vw - 240px);
